# bda-pca

./: README.md  pca.ipynb  pyproject.toml  univ-power.csv
