[tool.poetry]
name = "bda-pca"
version = "0.1.0"
description = "Big Data Analysis: Principal Component Analysis"
authors = ["ygkn <2000ygkn0713@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
gestured-meeting = "gestured_meeting:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = 'src/\.pyi?$'

[flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 79
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
